Include new functionalities
