# app/api/v1/router.py
@@ -1,5 +1,5 @@
 from fastapi import APIRouter
-from app.api.v1.endpoints import users, products, orders, wishlist
+from app.api.v1.endpoints import users, products, orders, wishlist, recommendations
 
 api_router = APIRouter()
 
@@ -7,3 +7,4 @@ api_router.include_router(users.router, prefix="/users", tags=["users"])
 api_router.include_router(products.router, prefix="/products", tags=["products"])
 api_router.include_router(orders.router, prefix="/orders", tags=["orders"])
 api_router.include_router(wishlist.router, prefix="/wishlist", tags=["wishlist"])
+api_router.include_router(recommendations.router, prefix="/recommendations", tags=["recommendations"])
